# SwiftTransfer

./: .gitignore  CMakeLists.txt  readme.md
AppConfig/: AppConfig.cpp  AppConfig.h
CipherUtils/: CipherUtils.cpp  CipherUtils.h
ClientManager/: ClientManager.cpp  ClientManager.h
FileManager/: FileManager.cpp  FileManager.h
FileManager/fstreamPool/: fstreamPool.cpp  fstreamPool.h  ifstreamPool.cpp  ifstreamPool.h  ofstreamPool.cpp  ofstreamPool.h
IDGenerator/: IDGenerator.cpp  IDGenerator.h
ThreadPool/: threadpool.cpp  threadpool.h
client/: client.cpp  client.h  main.cpp
client/ClientView/: ClientView.cpp  ClientView.h
database/: database.cpp  database.h
grpc/: Makefile  entity.proto  service.proto
server/: main.cpp  server.cpp  server.h
server/ServerView/: ServerView.cpp  ServerView.h
